# regex-testing

./: CMakeLists.txt  README.md  main.cpp  search_russian.txt
